apps/site/web/static/css/_schedule.scss
.schedule-route-icon {
  margin: 5px;
}

.form-control.schedule-route-selector {
  // leave room for the route icon
  max-width: 80%;
  float: left;
}

.schedules-link {
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 0;
  border-top: 1px solid $gray-lighter;
  border-bottom: 1px solid $gray-lighter;
  text-align: left;

  i {
    line-height: 24px;
  }
}

.alerts-modal-button,
.alerts-modal-button:hover,
.alerts-modal-button:active,
.alerts-modal-button:focus {
  margin-top: 10px;
  margin-bottom: 10px;
  text-align: left;
  background-color: $alert-notice;
  color: inherit;

  p {
    margin: 0;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }

  i {
    line-height: 24px;
  }
}

.fare-list {
  list-style: none;
  padding: 0;
  border: 1px solid $gray-lightest;

  li:first-child {
    background-color: $brand-primary-darkest;
    color: white;
    border-bottom: none;
    border-left: 1px solid $brand-primary-darkest;
    border-right: 1px solid $brand-primary-darkest;
  }

  li {
    padding: 6px;
    border-left: 1px solid $gray-lightest;
    border-right: 1px solid $gray-lightest;
    border-bottom: 1px solid $gray-lightest;
  }
}

.subway-map {
  width: 100%;
  max-height: 240px;
  object-fit: cover;
  object-position: 50% 30%;
  @include media-breakpoint-up(sm) {
    transition: max-height 1s ease, object-position 1s ease;
    -webkit-transition: max-height 1s ease, object-position 1s ease;
    cursor: nesw-resize;
    &.expanded {
      max-height: map-get($container-max-widths, md);
      object-position: initial;
    }
  }
  // Leave the map fully expanded on mobile
  @include media-breakpoint-down(sm) {
    height: 100%;
    max-height: 100%;
  }
}

body.no-js .subway-map {
  max-height: map-get($container-max-widths, md);
  object-position: initial;
}

.schedule-list-group {
  .list-group-item:first-child {
    border-radius: 0;
  }
  .list-group-item:last-child {
    border-radius: 0;
    background-color: $gray-lightest;
  }

  .list-group-item {
    .schedule-title {
      color: $brand-primary-dark;
    }
    &:hover {
      background-color: $brand-primary-lightest;
    }
  }

  a.list-group-item.selected-period {
    .schedule-title {
      color: white;
    }
    &:hover {
      background-color: $brand-primary-light;
      border: 4px solid $brand-primary-light;
      & + .list-group-item {
        border: 4px solid $brand-primary-light;
      }
    }
  }

  div.list-group-item.selected-period:hover {
    background-color: white;
  }
}

.selected-header {
  background-color: $brand-primary-dark;
}

.selected-period {
  border: 4px solid $brand-primary-dark;
}

.table.schedule-pairs {
  border-left: 1px solid $gray-lighter;
  border-right: 1px solid $gray-lighter;
  th {
    border-bottom: none;
  }
}

.schedule-pairs-header {
  color: white;
  background-color: $brand-primary-darkest;
}

.trip-list {
  padding-left: 10px;
}

.trip-stop {
  position: relative;
  margin-bottom: 0;
  padding-bottom: 1px;
  padding-left: 10px;
  list-style: none;

  &:after {
    content: url('/images/trip-circle-open.svg');
    color: $brand-primary-dark;
    position: absolute;
    left: -21px;
    top: 1px;
  }

  &:before {
    content: "";
    position: absolute;
    left: -11px;
    border-left: 3px solid $brand-primary-dark;
    height: 100%;
    width: 1px;
  }

  &:first-child:before {
    top: 6px;
  }
  &:last-child:before {
    height: 6px;
  }

  &:first-child:after, &:last-child:after {
    content: url('/images/trip-circle-filled.svg');
  }
}

